# csm_gz_sim

./: CMakeLists.txt  README.md  package.xml
config/: lance_gz_bridge.yaml  ros_gz_bridge.yaml  xbox_ctrl.yaml
description/: lance.urdf
description/lance/: model.sdf
description/lance/meshes/: lance-2024-body-tags.dae
launch/: demo.launch.py  gazebo_sim.launch.py  robot_state_publisher.launch.py  sim_coprocessor.launch.py  sim_gazebo.launch.py  xbox_ctrl.launch.py
worlds/: artemis-arena.world  artemis_arena_import.urdf
worlds/meshes/: artemis-arena-env.dae  rock1.dae  rock2.dae  rock3.dae  rock4.dae  rock5.dae  rock6.dae
